[package]
name = "ioci"
version = "0.1.0"
edition = "2024"
authors = ["Lingxuan Ye <ink@lingxuan.io>"]
categories = ["command-line-utilities"]
repository = "https://github.com/Lingxuan-Ye/ioci"
readme = "README.md"
license = "MIT"
publish = false
description = "A keychain project."

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["cargo"] }
eoe = "0.4.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
